# exp-dvector-prediction-wains

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  default.nix  exp-dvector-prediction-wains.cabal  notes  package.yaml  stack.yaml  trimUniverse
app/: Main.hs
appAgentCSV/: Main.hs
appBrainReport/: Main.hs
appExamineAgent/: Main.hs
appGenPop/: Main.hs
appInteractive/: Main.hs
src/ALife/Creatur/Wain/DVector/Prediction/: Action.hs  ActionInternal.hs  Daemon.hs  DataSource.hs  ExamineAgent.hs  Experiment.hs  GeneratePopulation.hs  Interactive.hs  Muser.hs  MuserInternal.hs  Object.hs  ResponseTweaker.hs  Universe.hs
test/: Main.hs  Spec.hs
test/ALife/Creatur/Wain/DVector/Prediction/: ActionQC.hs  ExperimentQC.hs  MuserQC.hs  ResponseTweakerQC.hs
test/ALife/Creatur/Wain/UIVector/Prediction/: ActionQC.hs
