name:           exp-dvector-prediction-wains
version:        1.0.11
description:    Please see the README on GitHub at <https://github.com/mhwombat/exp-dvector-prediction-wains#readme>
homepage:       https://github.com/mhwombat/exp-dvector-prediction-wains#readme
bug-reports:    https://github.com/mhwombat/exp-dvector-prediction-wains/issues
author:         Amy de Buitléir
maintainer:     amy@nualeargais.ie
copyright:      2018 Amy de Buitléir
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/mhwombat/exp-dvector-prediction-wains

library
  exposed-modules:
      ALife.Creatur.Wain.DVector.Prediction.Action
      ALife.Creatur.Wain.DVector.Prediction.ActionInternal
      ALife.Creatur.Wain.DVector.Prediction.DataSource
      ALife.Creatur.Wain.DVector.Prediction.Experiment
      ALife.Creatur.Wain.DVector.Prediction.Muser
      ALife.Creatur.Wain.DVector.Prediction.MuserInternal
      ALife.Creatur.Wain.DVector.Prediction.ResponseTweaker
      ALife.Creatur.Wain.DVector.Prediction.Universe
  other-modules:
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror
  build-depends:
      MonadRandom
    , app-settings
    , base >=4.7 && <5
    , cereal
    , cond
    , containers
    , creatur
    , creatur-dvector-wains >= 1.1.3 && < 1.2
    , creatur-wains == 9.6.*
    , deepseq
    , directory
    , filepath
    , lens
    , mtl
    , random
    , split
  default-language: Haskell2010

executable exp-dvector-prediction-wains-agent-csv
  main-is: Main.hs
  other-modules:
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      appAgentCSV
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , creatur-wains
    , exp-dvector-prediction-wains
  default-language: Haskell2010

executable exp-dvector-prediction-wains-brain-report
  main-is: Main.hs
  other-modules:
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      appBrainReport
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , containers
    , creatur
    , creatur-wains
    , exp-dvector-prediction-wains
    , lens
  default-language: Haskell2010

executable exp-dvector-prediction-wains-daemon
  main-is: Main.hs
  other-modules:
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , creatur
    , exp-dvector-prediction-wains
    , hdaemonize
    , lens
    , mtl
  default-language: Haskell2010

executable exp-dvector-prediction-wains-examine-agent
  main-is: Main.hs
  other-modules:
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      appExamineAgent
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , creatur-wains
    , exp-dvector-prediction-wains
  default-language: Haskell2010

executable exp-dvector-prediction-wains-init
  main-is: Main.hs
  other-modules:
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      appGenPop
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      MonadRandom
    , base >=4.7 && <5
    , creatur
    , creatur-wains
    , exp-dvector-prediction-wains
    , lens
    , mtl
  default-language: Haskell2010

executable exp-dvector-prediction-wains-interactive
  main-is: Main.hs
  other-modules:
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      appInteractive
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >=4.7 && <5
    , creatur
    , exp-dvector-prediction-wains
    , lens
    , mtl
  default-language: Haskell2010

test-suite exp-dvector-prediction-wains-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ALife.Creatur.Wain.DVector.Prediction.ActionQC
      ALife.Creatur.Wain.DVector.Prediction.ExperimentQC
      ALife.Creatur.Wain.DVector.Prediction.MuserQC
      ALife.Creatur.Wain.DVector.Prediction.ResponseTweakerQC
      Paths_exp_dvector_prediction_wains
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , creatur-dvector-wains
    , creatur-wains
    , creatur-wains-test-utils
    , deepseq
    , exp-dvector-prediction-wains
    , lens
    , numeric-tools
    , test-framework
    , test-framework-quickcheck2
  default-language: Haskell2010
