cabal-version:      2.4
name:               exp-dvector-prediction-wains
synopsis:           experiment
version:            1.0.12
description:
  Please see the README on GitHub at <https://github.com/mhwombat/exp-dvector-prediction-wains#readme>
homepage:
  https://github.com/mhwombat/exp-dvector-prediction-wains#readme
bug-reports:
  https://github.com/mhwombat/exp-dvector-prediction-wains/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2012-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/exp-dvector-prediction-wains

common common-stuff
  default-language: Haskell2010

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    ALife.Creatur.Wain.DVector.Prediction.Action
    ALife.Creatur.Wain.DVector.Prediction.ActionInternal
    ALife.Creatur.Wain.DVector.Prediction.DataSource
    ALife.Creatur.Wain.DVector.Prediction.Experiment
    ALife.Creatur.Wain.DVector.Prediction.Muser
    ALife.Creatur.Wain.DVector.Prediction.MuserInternal
    ALife.Creatur.Wain.DVector.Prediction.ResponseTweaker
    ALife.Creatur.Wain.DVector.Prediction.Universe
  other-modules:   Paths_exp_dvector_prediction_wains
  autogen-modules: Paths_exp_dvector_prediction_wains
  ghc-options:     -Wall -Wunused-packages -Werror
  build-depends:
    , app-settings
    , base                   >=4.7   && <5
    , cereal
    , cond
    , creatur
    , creatur-dvector-wains  >=1.1.4 && <1.2
    , creatur-genes          ^>=1.0.0
    , creatur-wains          ^>=9.8
    , deepseq
    , directory
    , filepath
    , lens
    , MonadRandom
    , mtl
    , random
    , split

executable exp-dvector-prediction-wains-agent-csv
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appAgentCSV
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur-wains
    , exp-dvector-prediction-wains

executable exp-dvector-prediction-wains-brain-report
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appBrainReport
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , containers
    , creatur
    , creatur-genes          ^>=1.0.0
    , creatur-wains
    , exp-dvector-prediction-wains
    , lens

executable exp-dvector-prediction-wains-daemon
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur
    , exp-dvector-prediction-wains
    , hdaemonize
    , lens
    , mtl

executable exp-dvector-prediction-wains-examine-agent
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appExamineAgent
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur-wains
    , exp-dvector-prediction-wains

executable exp-dvector-prediction-wains-init
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appGenPop
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur
    , creatur-wains
    , exp-dvector-prediction-wains
    , lens
    , MonadRandom
    , mtl

executable exp-dvector-prediction-wains-interactive
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appInteractive
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur
    , exp-dvector-prediction-wains
    , lens
    , mtl

test-suite exp-dvector-prediction-wains-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    ALife.Creatur.Wain.DVector.Prediction.ActionQC
    ALife.Creatur.Wain.DVector.Prediction.ExperimentQC
    ALife.Creatur.Wain.DVector.Prediction.MuserQC
    ALife.Creatur.Wain.DVector.Prediction.ResponseTweakerQC
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur-dvector-wains
    , creatur-wains
    , creatur-genes
    , deepseq
    , exp-dvector-prediction-wains
    , lens
    , numeric-tools
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2
