cabal-version:      2.4
name:               exp-dvector-prediction-wains
synopsis:           experiment
version:            1.0.13
description:
  Please see the README on GitHub at <https://github.com/mhwombat/exp-dvector-prediction-wains#readme>
homepage:
  https://github.com/mhwombat/exp-dvector-prediction-wains#readme
bug-reports:
  https://github.com/mhwombat/exp-dvector-prediction-wains/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2012-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/exp-dvector-prediction-wains

common common-stuff
  default-language: Haskell2010
  build-depends:
    , base                          >=4.7 && <5

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    ALife.Creatur.Wain.DVector.Prediction.Action
    ALife.Creatur.Wain.DVector.Prediction.ActionInternal
    ALife.Creatur.Wain.DVector.Prediction.DataSource
    ALife.Creatur.Wain.DVector.Prediction.Experiment
    ALife.Creatur.Wain.DVector.Prediction.Muser
    ALife.Creatur.Wain.DVector.Prediction.MuserInternal
    ALife.Creatur.Wain.DVector.Prediction.Universe
  other-modules:   Paths_exp_dvector_prediction_wains
  autogen-modules: Paths_exp_dvector_prediction_wains
  ghc-options:     -Wall -Wunused-packages -Werror
  build-depends:
    , app-settings          >= 0.2.0 && < 0.3
    , cereal                >= 0.5.8 && < 0.6
    , cond                  >= 0.4.1 && < 0.5
    , creatur               >= 5.9.32 && < 5.10
    , creatur-dvector-wains >= 1.1.5 && < 1.2
    , creatur-genes         >= 1.0.1 && < 1.1
    , creatur-wains
    , deepseq               >= 1.4.4 && < 1.5
    , directory             >= 1.3.6 && < 1.4
    , filepath              >= 1.4.2 && < 1.5
    , lens                  >= 4.19.2 && < 4.20
    , MonadRandom           >= 0.5.3 && < 0.6
    , mtl                   >= 2.2.2 && < 2.3
    , random                >= 1.2.0 && < 1.3
    , som                   >= 11.0 && < 11.1
    , split                 >= 0.2.3 && < 0.3

executable exp-dvector-prediction-wains-agent-csv
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appAgentCSV
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur-wains                 
    , exp-dvector-prediction-wains

executable exp-dvector-prediction-wains-brain-report
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appBrainReport
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , containers                   >= 0.6.5 && < 0.7
    , creatur                      >= 5.9.32 && < 5.10
    , creatur-dvector-wains >= 1.1.5 && < 1.2
    , creatur-genes                >= 1.0.1 && < 1.1
    , creatur-wains               
    , exp-dvector-prediction-wains
    , som                   >= 11.0 && < 11.1

executable exp-dvector-prediction-wains-daemon
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , creatur                      >= 5.9.32 && < 5.10
    , exp-dvector-prediction-wains
    , hdaemonize                   >= 0.5.6 && < 0.6
    , lens                         >= 4.19.2 && < 4.20
    , mtl                          >= 2.2.2 && < 2.3

executable exp-dvector-prediction-wains-examine-agent
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appExamineAgent
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , creatur-wains               
    , exp-dvector-prediction-wains

executable exp-dvector-prediction-wains-init
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appGenPop
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , creatur                      >= 5.9.32 && < 5.10
    , creatur-wains               
    , exp-dvector-prediction-wains
    , lens                         >= 4.19.2 && < 4.20
    , MonadRandom                  >= 0.5.3 && < 0.6
    , mtl                          >= 2.2.2 && < 2.3

executable exp-dvector-prediction-wains-interactive
  import:         common-stuff
  main-is:        Main.hs
  hs-source-dirs: appInteractive
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , creatur                      >= 5.9.32 && < 5.10
    , exp-dvector-prediction-wains
    , lens                         >= 4.19.2 && < 4.20
    , mtl                          >= 2.2.2 && < 2.3

test-suite exp-dvector-prediction-wains-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    ALife.Creatur.Wain.DVector.Prediction.ActionQC
    ALife.Creatur.Wain.DVector.Prediction.ExperimentQC
    ALife.Creatur.Wain.DVector.Prediction.MuserQC
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , base                          >=4.7 && <5
    , creatur-wains
    , creatur-genes
    , deepseq
    , exp-dvector-prediction-wains
    , lens
    , numeric-tools
    , QuickCheck
    , som
    , test-framework
    , test-framework-quickcheck2
    , quickcheck-with-counterexamples
